<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.KgActivity"
    android:orientation="vertical"
    android:background="@drawable/asfar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/PoidKG"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/kgicon"
            />

        <EditText
            android:id="@+id/txtKG"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/hint_KG"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:id="@+id/button_Poid"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_width="280dp"
        android:text="@string/Button"
        android:background="@drawable/rounded_corner"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"/>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/PoidLB"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/lb_icon"
            />

        <TextView
            android:id="@+id/txtLB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/hint_LB"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:background="@null"/>
    </TableRow>

</LinearLayout>